@@ -14,6 +14,7 @@ MESSAGES = {
     "More posts about %s": "More posts about %s",
     "Newer posts": "Newer posts",
     "Next post": "Next post",
+    "Next": "Next",
     "No posts found.": "No posts found.",
     "Nothing found.": "Nothing found.",
     "Older posts": "Older posts",
@@ -25,6 +26,7 @@ MESSAGES = {
     "Posts for {month} {day}, {year}": "Posts for {month} {day}, {year}",
     "Posts for {month} {year}": "Posts for {month} {year}",
     "Previous post": "Previous post",
+    "Previous": "Previos",
     "Publication date": "Publication date",
     "RSS feed": "RSS feed",
     "Read in English": "Read in English",
@@ -36,6 +38,7 @@ MESSAGES = {
     "Tags": "Tags",
     "Toggle navigation": "Toggle navigation",
     "Uncategorized": "Uncategorized",
+    "Up": "Up",
     "Updates": "Updates",
     "Write your page here.": "Write your page here.",
     "Write your post here.": "Write your post here.",
